samples/_failures_safe/1761641946_c2dc91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_052bf5b8.c: In function ‘main’:
./samples/SAFE/__tmp_052bf5b8.c:142:5: error: expected expression at end of input
  142 |     uint8_t sample_data1[] = {0x48, 0x65, 0x6C,
      |     ^~~~~~~
./samples/SAFE/__tmp_052bf5b8.c:142:5: error: expected declaration or statement at end of input
